mavensmate/SandBox/src/objects/Slider_Assembly__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Slider Assemblies</relationshipLabel>
        <relationshipName>Slider_Assemblies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>The date the safety equipment was assigned to the customer</description>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ball_Shank_Batch__c</fullName>
        <label>Ball Shank Batch</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ball_Shank_Die__c</fullName>
        <label>Ball Shank Die</label>
        <picklist>
            <picklistValues>
                <fullName>Die 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Anything that cannot be captured with the existing fields</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ferule_Batch__c</fullName>
        <label>Ferule Batch</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ferule_Die__c</fullName>
        <label>Ferule Die</label>
        <picklist>
            <picklistValues>
                <fullName>Die 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>RSA2 Dual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA2 Adjustable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA2 Sky Tykes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Returned__c</fullName>
        <label>Reason Returned</label>
        <picklist>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <description>The date the safety equipment was returned for any reason</description>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Destroyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <label>Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tested_By__c</fullName>
        <label>Tested By</label>
        <picklist>
            <picklistValues>
                <fullName>Snap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Slider Assembly</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Serial_Number__c</columns>
        <columns>Model__c</columns>
        <columns>Status__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Tested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model__c</field>
            <operation>equals</operation>
            <value>RSA2 Dual</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <label>Inventory RSA2 Dual Sling Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AssignedRSA2DualSlingLines</fullName>
        <columns>NAME</columns>
        <columns>Serial_Number__c</columns>
        <columns>Model__c</columns>
        <columns>Status__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Tested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model__c</field>
            <operation>equals</operation>
            <value>RSA2 Dual</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned RSA2 Dual Sling Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InventoryRSA2AdjustableSlingLines</fullName>
        <columns>NAME</columns>
        <columns>Serial_Number__c</columns>
        <columns>Model__c</columns>
        <columns>Status__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Tested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model__c</field>
            <operation>equals</operation>
            <value>RSA2 Adjustable</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filters>
        <label>Inventory RSA2 Adjustable Sling Lines</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slider Assemblies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>